// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it create actions propertly MovieFetching 1`] = `
Object {
  "page": "page_1",
  "type": "MOVIE::FETCHING",
}
`;

exports[`it create actions propertly getMovieDone 1`] = `
Object {
  "movie": Object {
    "movie": "test movie ",
  },
  "page": "page_1",
  "type": "MOVIE::FETCHING::DONE",
}
`;

exports[`it create actions propertly getMovieError 1`] = `
Object {
  "error": "this is a test error",
  "type": "MOVIE::FETCHING::ERROR",
}
`;
